--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,6 +7,9 @@
 /* Import modern font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
+/* Import families custom styling */
+@import './families.css';
+
 /* Color Variables */
 :root {
   /* Brand Colors */
